# sae-genomics

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  RUNPOD_TESTING.md  SETUP_COMPLETE.md  TESTING_STATUS.md  check_model_dims.py  fix_try_except.py  pyproject.toml  verify_dataset.py
configs/models/: tx1_3b.yaml  tx1_70m.yaml
configs/training/: default.yaml  tahoe100m_3b_layer16.yaml
configs/validation/: databases.yaml
docs/: configuration.md  index.md  installation.md  quickstart.md
notebooks/: README.md
scripts/: 01_train_sae.py  02_extract_features.py  03_create_dashboard.py  04_validate_features.py  convert_ensembl_to_symbols.py  download_tahoe100m.py  download_test_data.py  download_validation_databases.py  run_pipeline.py  test_pipeline_mock.py  train_sae.py  train_sae_tahoe100m.py  validate_features.py  validate_sae_features.py
src/sae_genomics/: __init__.py  cli.py
src/sae_genomics/models/: __init__.py  model_config.py  tahoe_adapter.py
src/sae_genomics/training/: __init__.py  config.py  trainer.py
src/sae_genomics/utils/: __init__.py  feature_analysis.py
src/sae_genomics/validation/: __init__.py  local_client.py
src/sae_genomics/validation/databases/: __init__.py
src/sae_genomics/validation/downloaders/: __init__.py  base.py  clinvar.py  disgenet.py  gencc.py  gwas_catalog.py  hpo.py  monarch.py  omim.py  open_targets.py  orphanet.py  string.py
src/sae_genomics/validation/enrichment/: __init__.py  fisher_exact.py
src/sae_genomics/validation/parsers/: __init__.py  base.py  clinvar.py  disgenet.py  gencc.py  gwas_catalog.py  hpo.py  monarch.py  omim.py  open_targets.py  orphanet.py  string.py
src/sae_genomics/validation/visualization/: __init__.py
